--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     }
   ],
   "require": {
-    "php": ">=7.3",
-    "phpunit/phpunit": "9.5.x-dev"
+    "php": ">=7",
+    "phpunit/phpunit": ">=9"
   },
   "autoload": {
     "psr-4": {
